--- a/server/pom.xml
+++ b/server/pom.xml
@@ -95,6 +95,22 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+ 		 	<artifactId>jakarta.validation-api</artifactId>
+  			<version>3.0.2</version>
+		</dependency>
+		<dependency>
+ 			 <groupId>org.hibernate.validator</groupId>
+  			<artifactId>hibernate-validator</artifactId>
+ 			 <version>8.0.1.Final</version>
+		</dependency>
+
+		<dependency>
+    	<groupId>javax.validation</groupId>
+    	<artifactId>validation-api</artifactId>
+    	<version>2.0.1.Final</version>
+	</dependency>
 
 		</dependencies>
 
