this is the code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=demo
+spring.application.name=Project-module
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
