--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.application.name=Project-module
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=
-spring.datasource.username=
-spring.datasource.password=
+spring.application.name=Devchat
+spring.datasource.url=jdbc:postgresql://localhost:5432/Devchat
+spring.datasource.username=postgres
+spring.datasource.password=dontsaycheese@123
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+# spring.h2.console.enabled=true (commented out, not needed for Postgres)
