--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,30 @@ temp/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# React specific
+node_modules/
+build/
+dist/
+
+# Dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/build
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
